--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
   	<p><%= i.bodytext %></p>
 
 
-
+<p>something</p>
 
   	<%= link_to "Read More", post_path(i), :class => 'btn btn default' %>
  </div>
